CMAKE_MINIMUM_REQUIRED(VERSION 3.12)

SET(CMAKE_CXX_STANDARD 11)

PROJECT(odbccpp)

FIND_PACKAGE(ODBC REQUIRED)
FIND_PACKAGE(Doxygen)
FIND_PACKAGE(GTest)

FILE(STRINGS cfg/VERSION version)

ENABLE_TESTING()

ADD_SUBDIRECTORY(src)
IF (GTEST_FOUND)
    ADD_SUBDIRECTORY(test)
ENDIF()
IF (DOXYGEN_FOUND)
    ADD_SUBDIRECTORY(doc)
ENDIF()
