CMAKE_MINIMUM_REQUIRED(VERSION 3.12)

SET(CMAKE_CXX_STANDARD 11)

PROJECT(odbccpp)

INCLUDE(GNUInstallDirs)
INCLUDE(CMakePackageConfigHelpers)

FIND_PACKAGE(ODBC REQUIRED)
FIND_PACKAGE(Doxygen)
FIND_PACKAGE(GTest)

FILE(STRINGS cfg/VERSION version)

ENABLE_TESTING()

ADD_SUBDIRECTORY(src)
IF (GTEST_FOUND)
    ADD_SUBDIRECTORY(test)
ENDIF()
IF (DOXYGEN_FOUND)
    ADD_SUBDIRECTORY(doc)
ENDIF()

CONFIGURE_PACKAGE_CONFIG_FILE(
    cmake/odbccppConfig.cmake.in
    "${CMAKE_CURRENT_BINARY_DIR}/odbccppConfig.cmake"
    INSTALL_DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/odbccpp"
)

INSTALL(FILES
    "${CMAKE_CURRENT_BINARY_DIR}/odbccppConfig.cmake"
    DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/odbccpp"
)
